@@ -1,8 +1,10 @@
 === master
 
+* Add help_examples plugin supporting showing examples in command help output (jeremyevans)
+
 * Add help_order method to support ordering and/or suppressing help sections (jeremyevans)
 
-* Move usages method to a usages plugin (jeremyevans)
+* Move usages method to usages plugin (jeremyevans)
 
 * Allow Processor#on to work with a block and no argument to configure the root command (jeremyevans)
 
